--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
               </div>
             </a>
-            <a href="">
+            <a href="views/Metro.html">
               <div class="col-md-6">
               <div class="template">
                 <div class="imgHide">
