--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </div>
               </div>
             </a>
-            <a href="">
+            <a href="views/itunes.html">
               <div class="col-md-4">
                 <div class="template">
                   <div class="imgHide">
@@ -111,43 +111,62 @@
             </div>
           </div>
           <div class="row">
+            <div class="col-sm-6">
+              <h2>Code</h2>
+              <div class="col-xs-6">
+                <h4>
+                  html <br><br>
+                  CSS <br><br>
+                  SASS <br><br>
+                  bootstrap <br><br>
+                  Javascript
 
-              <div class="col-md-6">
-                <div class="secondTemp">
-                  <div class="imgHide">
-                  <div class="workImg" id="pph"></div>
-                  </div>
-                  <h3>Personal Blog</h3>
-                  <a href="">
-                    <div class="btn-view">
-                      <h3>View</h3>
-                    </div>
-                  </a>
-                </div>
+                </h4>
               </div>
-
-
-              <div class="col-md-6">
-                <div class="secondTemp">
-                  <div class="imgHide">
-                    <div class="workImg" id="pph"></div>
-                  </div>
-                  <h3>Codepen</h3>
-                  <a href="">
-                    <div class="btn-dot">
-                      <i class="fa fa-codepen" aria-hidden="true"></i>
-                    </div>
-                  </a>
-                </div>
+              <div class="col-xs-6">
+                <h4>
+                  Jquery <br><br>
+                  Vue.Js <br><br>
+                  AngularJS <br><br>
+                  PHP <br><br>
+                  Wordpress <br><br>
+                </h4>
               </div>
+            </div>
+            <div class="col-sm-6">
+              <h2>Other</h2>
+              <div class="col-xs-6">
+                <h4>
+                  UX and UI Design <br><br>
+                  User Testing <br><br>
+                  Wireframing <br><br>
+                  Information Architecture <br><br>
+                  Graphic Design
 
+                </h4>
+              </div>
+              <div class="col-xs-6">
+                <h4>
+                  <h4>
+                    Adobe Photoshop <br><br>
+                    Adobe Illustrator <br><br>
+                    Adobe inDesign <br><br>
+                    Adobe Edge Animate <br><br>
+
+
+                  </h4>
+                </h4>
+              </div>
+            </div>
           </div>
+
         </div>
       </div>
 
       <footer>
         <div class="container">
-          &copy; 2017 Jose Ramirez
+          <p>&copy; Jose Ramirez 2017</p>
+
         </div>
       </footer>
 
